# portunus

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  .travis.yml  BACKGROUND.md  Cargo.toml  HISTORY.md  README.md  TODO.md  WORKSPACE  compile_commands.json  demo_simc_addon_report.txt  scratch.md  tbb.BUILD  tf_install.txt
.cargo/: config.toml
addon/: FlatBuffers.lua  GameState.lua  PortunusExporter.lua  PortunusExporter.toc  README.md  gamestate.fbs  schema.fbs  symlink.bat  update_flatbuffers.py
addon/classes/: Common.lua
addon/game_state_schema/: Aura.lua  Cooldown.lua  EnemyUnit.lua  GameState.lua  PlayerUnit.lua  Resource.lua  ResourceType.lua  SpellCastInfo.lua  UnitBase.lua  UnitBaseInfo.lua
addon/lib/: FlatBuffers.lua  MessagePack.lua
addon/proto/: GameState.proto  fakerequire.lua  generating_protos.txt  lua-pb.toc  pb-wow.lua  proto_refresh.bat  saveast.lua
backend/python/: demo.py
backend/rust/datamining/: Cargo.toml
backend/simulation/simulator/: Cargo.toml  build.rs
backend/simulation/simulator/proto/: portunus.proto
backend/simulation/simulator/src/: main.rs  online_statistics.rs
datamining/: Cargo.toml
datamining/src/: casc.rs
encounter_templates/: two_targets.textproto
encounters/: encounter_patchwork.textproto  healthestimator_execute.textproto
examples/full/: demo.textproto
finetuning/: README.md
frontend/: .flaskenv  .gitignore  README.md  app.yaml  config.py  forms.py  main.py  portunus.py  requirements.txt  run.py  tests.py
learn/: BUILD  gearset_summarizer.py  player_builder.py  policygen.py  simc_addon_parser.py  simulation_client.py
models/: README.md
outlaw_sim/: outlaw_agent.py  pyproject.toml
outlaw_sim/simulation/: actions.py  sim.py
overlay/: Cargo.toml  README.md
overlay/src/: capturer.rs  main.rs
planning/: README.md
policygen/: encounter_builder.py
portunusOLD/: BACKGROUND.md  README.md  WORKSPACE
proto/: BUILD  actor.proto  encounter.proto  encounter_config.proto  equipment.proto  gearset.proto  player_config.proto  policy.proto  policy_config.proto  portunus.proto  service.proto  simulation.proto  simulation_service.proto  talents.proto
simulate/: BUILD  simulation_client.cc  simulation_service.cc  simulation_service_client.cc  simulator_service.proto
simulation/: Cargo.toml
simulation/simulator/: Cargo.toml
simulation/simulator/proto/: portunus.proto
simulation/simulator/src/: client.rs  server.rs
simulator/: BUILD  Cargo.toml  DESIGNDOC.md  actor.h  aura.h  config_processors.cc  config_processors.h  constants.h  engine.cc  engine.h  gearset_builder.h  launch_service.cc  launch_standalone.cc  online_statistics.cc  online_statistics.h  online_statistics_test.cc  player.h  player_combat_stats.h  service.cc  service_binary.cc  simulate.cc  simulate.h  simulation_context.h  spell.h  standalone.cc  standalone_binary.cc  threadpool.h
tools/: aspects.bzl  static_analysis.sh
toyproblem/: README.md  actions.py  main.py  mcts.py  sample_simc_dump.txt  sim.py
training/: README.md  human_controller.py  outlaw_environment.py  pyproject.toml
(+133 files in other folders)
