[package]
name = "datamining"
version = "0.1.0"
authors = ["Matt Redmond <mttrdmnd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.2"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"]}

[build-dependencies]
tonic-build = "0.2"
