[package]
name = "simulator"
version = "0.1.0"
authors = ["Matt Redmond <mttrdmnd@gmail.com>"]
edition = "2018"

[[bin]]
name = "simulator-server"
path = "src/server.rs"

[[bin]]
name = "simulator-client"
path = "src/client.rs"

[dependencies]
tonic = "0.2"
prost = "0.6"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "0.2", features = ["macros", "sync", "stream", "time"]}

async-stream = "0.2"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
rand = "0.7"

[build-dependencies]
tonic-build = "0.2"
